Make surefire work with modules